<resources>
    <string name="app_name">ExampleMVC</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_welcome">Welcome to profiler</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">password</string>
    <string name="hint_email">email@example.com</string>
    <string name="hint_password">123456</string>
    <string name="action_sign_in">sign in</string>
    <string name="action_regester">regester</string>
</resources>
